<resources>
    <string name="app_name">Budget Manager</string>
    <string name="username">Nutzer</string>

    <string name="header_settings">Einstellungen</string>
    <string name="header_export">Export</string>
    <string name="header_history">Verlauf</string>
    <string name="header_about">Über die App</string>
    <string name="header_home">current month here</string>

    <string name="export_button">Export ausgewählter Daten</string>

    <string name="settings_name_headline">Nutzername:</string>
    <string name="settings_name_hint">Nutzernamen ändern</string>

    <string name="settings_currency_headline">Währung:</string>

    <string name="settings_income_headline">monatliches Budget:</string>
    <string name="settings_income_hint">monatliches Budget ändern</string>

    <string name="settings_fixed_headline">monatliche Fixkosten:</string>
    <string name="settings_fixed_name_hint">Bezeichnung</string>
    <string name="settings_fixed_amount_hint">Kosten</string>
    <string name="settings_fixed_button">+</string>

    <string name="home_filter_tag">Filter: </string>

    <string name="currency">€</string>

    <string name="home_popup_add_header">Ausgaben hinzufügen</string>
    <string name="home_popup_add_kategorien_header">Kategorie:</string>
    <string name="home_popup_add_bezeichnung_header">Bezeichnung:</string>
    <string name="home_popup_add_bezeichnung_hint">Bezeichnung eingeben</string>
    <string name="home_popup_add_betrag_header">Betrag:</string>
    <string name="home_popup_add_betrag_hint">Betrag eingeben</string>
    <string name="home_popup_add_datum_header">Datum:</string>
    <string name="home_popup_button">Eintrag anlegen</string>

    <string name="developer">Bastian Barth</string>
    <string name="course">Projekt Mobile Computing</string>
    <string name="university">Hochschule Schmalkalden</string>
    <string name="github_link">https://github.com/bastiRGV/Budget_Manager</string>

    <string name="setup_username">Nutzernamen:</string>
    <string name="setup_username_hint">Nutzernamen eingeben</string>

    <string name="setup_header">Nutzerdaten eingeben</string>
    <string name="setup_budget">monatliches Budget:</string>
    <string name="setup_budget_hint">monatliches Budget eingeben</string>
    <string name="setup_button">Eingaben festlegen</string>

</resources>