<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popup_background"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_header"
        android:gravity="center_horizontal"
        android:text="@string/home_popup_add_header"
        android:textSize="20sp"
        android:textStyle="bold"/>


<!--Kategorie auswählen-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_kategorie_header"
        android:layout_below="@+id/popup_add_header"
        android:layout_marginTop="20dp"
        android:text="@string/home_popup_add_kategorien_header"
        android:textSize="15sp"/>

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_kategorie_dropdown"
        android:layout_below="@+id/popup_add_kategorie_header"
        android:layout_marginTop="5dp"/>

<!--Bezeichnung eingeben-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_bezeichnung_header"
        android:layout_below="@+id/popup_add_kategorie_dropdown"
        android:layout_marginTop="20dp"
        android:text="@string/home_popup_add_bezeichnung_header"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_bezeichnung_input_container"
        app:hintAnimationEnabled="true"
        android:layout_below="@+id/popup_add_bezeichnung_header"
        android:hint="@string/home_popup_add_bezeichnung_hint"
        app:endIconMode="clear_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/popup_add_bezeichnung_input"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--Betrag eingeben-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_betrag_header"
        android:layout_below="@+id/popup_add_bezeichnung_input_container"
        android:layout_marginTop="20dp"
        android:text="@string/home_popup_add_betrag_header"
        android:textSize="15sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_betrag_input_container"
        app:hintAnimationEnabled="true"
        android:layout_below="@+id/popup_add_betrag_header"
        android:hint="@string/home_popup_add_betrag_hint"
        app:endIconMode="clear_text"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/popup_add_betrag_input"
            android:inputType="numberDecimal|numberSigned"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

<!--Datum eingeben-->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_datum_header"
        android:layout_below="@+id/popup_add_betrag_input_container"
        android:layout_marginTop="20dp"
        android:text="@string/home_popup_add_datum_header"
        android:textSize="15sp"/>

    <DatePicker
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:id="@+id/popup_add_datum_input"
        android:layout_below="@+id/popup_add_datum_header"
        android:layout_marginTop="5dp"
        android:datePickerMode="spinner"
        android:calendarViewShown="false"/>

<!--Button-->
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/popup_add_button"
        android:layout_below="@+id/popup_add_datum_input"
        android:text="@string/home_popup_button"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/lightgreen"/>


</RelativeLayout>